Add Gif index.html

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <h1>JEADYCE LEGRAND</h1>
     <p>Welcome to my Website!</p>
+    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif"/>
   </body>
 </html>
